# static-server

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  app
docs/: TZ.doc  title.doc
docs/tex/: 01-abstract.tex  10-introduction.tex  20-analyth.tex  30-design.tex  40-implement.tex  50-research.tex  60-conclusion.tex  70-appendix.tex  main-page.tex  ref-lib.bib
docs/tex/assets/: algo.drawio
inc/app/: config_reader.h  server.h  thread_pool.h
inc/http/: decisions_maker.h  event.h  events_handler.h  header.h  headers.h  request.h  response.h
lib/fs/: fs.c  fs.h
lib/log/: log.c  log.h
lib/queue/: queue.c  queue.h
nginx-example/: Dockerfile  nginx.conf  readme.md
nginx-example/media/: earth.swf  index.css  index.html  main.js
src/: main.c
src/app/: config_reader.c  server.c  thread_pool.c
src/http/: decisions_maker.c  events_handler.c  header.c  headers.c  request.c  response.c
